[project]
name = "chronosgraph"
version = "0.1.0"
description = "An episodic and relational memory layer for AI agents."
dependencies = [
    "numpy",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
